Password Manager 23.4.1
* Java 20
* JavaFX 20